fixed bug in edit events where deleted tickets were returned by endpoint
