# docs/swagger.json
@@ -18,7 +18,7 @@
         },
         "version": "1.0"
     },
-    "host": "partybank-organizer-269c8057a65f.herokuapp.com",
+    "host": "partybank-organizer-269c8057a65f.herokuapp.",
     "paths": {
         "/api/v1/attendee/update/{username}": {
             "put": {
@@ -1017,7 +1017,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Ticket"
+                                "$ref": "#/definitions/dtos.TicketResponse"
                             }
                         }
                     },
@@ -1663,23 +1663,6 @@
                 }
             }
         },
-        "models.ActivePeriod": {
-            "type": "object",
-            "properties": {
-                "ticket_sale_end_date": {
-                    "type": "string"
-                },
-                "ticket_sale_end_time": {
-                    "type": "string"
-                },
-                "ticket_sale_start_date": {
-                    "type": "string"
-                },
-                "ticket_sale_start_time": {
-                    "type": "string"
-                }
-            }
-        },
         "models.Location": {
             "type": "object",
             "properties": {
@@ -1699,92 +1682,6 @@
                     "type": "string"
                 },
                 "state": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Ticket": {
-            "type": "object",
-            "properties": {
-                "active_period": {
-                    "$ref": "#/definitions/models.ActivePeriod"
-                },
-                "additional_information_fields": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "available_discounted_tickets": {
-                    "type": "integer"
-                },
-                "capacity": {
-                    "type": "integer"
-                },
-                "category": {
-                    "type": "integer"
-                },
-                "colour": {
-                    "type": "string"
-                },
-                "discount_code": {
-                    "type": "string"
-                },
-                "discount_price": {
-                    "type": "number"
-                },
-                "discount_type": {
-                    "type": "string"
-                },
-                "event_id": {
-                    "type": "integer"
-                },
-                "event_reference": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "is_sold_out_ticket": {
-                    "type": "boolean"
-                },
-                "is_transfer_payment_fees_to_guest": {
-                    "type": "boolean"
-                },
-                "max_seats": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "number_available": {
-                    "type": "integer"
-                },
-                "percentage": {
-                    "type": "number"
-                },
-                "price": {
-                    "type": "number"
-                },
-                "purchase_limit": {
-                    "type": "integer"
-                },
-                "reference": {
-                    "type": "string"
-                },
-                "reserved": {
-                    "type": "integer"
-                },
-                "stock": {
-                    "type": "string"
-                },
-                "ticket_perks": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "type": {
                     "type": "string"
                 }
             }
